# KidsMind

./: .env.example  .gitignore  AGENTS.md  Design_Rules.md  README.md  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.yml
Services/api/app/: .env.example  main.py  pyproject.toml
Services/api/app/controllers/: auth.py  badge.py  chat.py  chat_controller.py  children.py  media.py  parent_dashboard.py  quiz.py
Services/api/app/core/: __init__.py  config.py  database.py  error_handlers.py  exceptions.py  llm.py  logging_setup.py  rate_limit_policy.py  storage.py
Services/api/app/crud/: crud_child_profiles.py  crud_child_rules.py
Services/api/app/dependencies/: auth.py  authentication.py  infrastructure.py
Services/api/app/middlewares/: __init__.py  csrf_middleware.py  rate_limit_dispatcher.py  vallidate_audio_file.py
Services/api/app/models/: __init__.py  badge.py  chat_history.py  child_profile.py  child_week_schedule.py  media_asset.py  refresh_token_session.py  user.py
Services/api/app/routers/: admin_media.py  admin_users.py  auth.py  chat.py  chat_router.py  children.py  health.py  media.py  mobile_auth.py  quiz.py  safety_and_rules.py  users.py  web_auth.py
Services/api/app/schemas/: auth_schema.py  badge_schema.py  chat_schema.py  child_profile_schema.py  media_schema.py  safety_and_rules_schema.py  user_schema.py
Services/api/app/services/: ai_service.py  auth_service.py  badge_service.py  bootstrap_admin.py  build_chain.py  chat_history.py  child_profile_context_cache.py  child_profile_service.py  generate_content.py  (+9 more)
(+508 files in other folders)
