[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.40.0",
]
